--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@ p {
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>AluraFlixx</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>ALURAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Batman - O Cavaleiro das Trevas :: Trailer Final</h1>
-            <p</p>
-        </div>#batman-cavaleiro-das-trevas</p>
+         
+        </p>#batman-cavaleiro-das-tre</p>
         </div>
 
           <div>
